# ai-grandchild

./: .env.example  .gitignore  APIs.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  ai_grandchild.db  docker-compose.yml  few-shot-example.txt  pyproject.toml
data/: ai_grandchild_en_us.db
src/: config.py  dashboard.py  database.py  main.py  pipeline.py  seeding.py
src/agents/: bridge.py  companion.py  investigator.py
src/agents/skills/: anonymizer.py  behavioral_search.py
src/backend/: database.py  main.py  scheduler.py
src/backend/routes/: accountService.py  admin.py  adminService.py  agentService.py  schedulerService.py  webhook.py
src/data/: mock_inputs.json
src/frontend/: app.py  auth.py
src/frontend/pages/: 1_Account_Management.py  1_🧑‍💼_Account_Management.py  2_🤖_Agent_Hub.py  2_🤖_Agents_Management.py  3_⏰_Automation_Jobs.py
src/routes/: admin.py  webhook.py
src/shared/: constant.py
src/skills/: anonymizer.py  behavioral_search.py  geofencing.py
static/: zalo_verifierH-Bd4CALRXicc_WMqObU3Hk7wYttyJ1pEJGq.html
