[project]
name = "ai-grandchild"
version = "0.1.0"
description = "AI Grandchild - Protecting seniors from timeshare scams"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.30.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
