[project]
name = "ai-grandchild"
version = "0.1.0"
description = "AI Grandchild - Protecting seniors from timeshare scams"
requires-python = ">=3.11"
dependencies = [
    "google-genai",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.30.0",
    "python-telegram-bot>=22.8",
    "requests",
    "streamlit>=1.58.0",
    "sqlalchemy>=2.0.51",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
